2003-04-12  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* added this file as a new entry.
	  See ../ChangeLog to find ChangeLog entries before than this day.